[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://ui/MainMenu.gd" id="1_q2w7g"]
[ext_resource type="PackedScene" path="res://ui/shared/FocusButton.tscn" id="2_4n9ca"]
[ext_resource type="PackedScene" path="res://ui/LibraryPanel.tscn" id="3_7gkbt"]
[ext_resource type="PackedScene" path="res://ui/SettingsPanel.tscn" id="4_wq9sn"]

[node name="MainMenu" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_q2w7g")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
alignment = 1
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
text = "SPROUTS"
horizontal_alignment = 1
vertical_alignment = 1
custom_minimum_size = Vector2(0, 80)
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="MenuStack" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
custom_minimum_size = Vector2(0, 200)
separation = 12

[node name="StartRun" parent="MarginContainer/VBoxContainer/MenuStack" instance=ExtResource("2_4n9ca")]
text = "Start Run"
size_flags_horizontal = 3

[node name="Library" parent="MarginContainer/VBoxContainer/MenuStack" instance=ExtResource("2_4n9ca")]
text = "Library"
size_flags_horizontal = 3

[node name="Settings" parent="MarginContainer/VBoxContainer/MenuStack" instance=ExtResource("2_4n9ca")]
text = "Settings"
size_flags_horizontal = 3

[node name="Exit" parent="MarginContainer/VBoxContainer/MenuStack" instance=ExtResource("2_4n9ca")]
text = "Exit"
size_flags_horizontal = 3

[node name="LibraryPanel" parent="." instance=ExtResource("3_7gkbt")]
visible = false

[node name="SettingsPanel" parent="." instance=ExtResource("4_wq9sn")]
visible = false

